# sds_tpi

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/endpoints/: calendar.py  oauth2.py
app/services/: crypto.py  google_calendar.py
app/services/oauth2/: __init__.py  database.py  oauth2.py  schemas.py  settings.py
