[tool.poetry]
name = "sds_tpi"
version = "0.1.0"
description = "Application to test OAuth2 for SDS"
authors = ["Gonzalo Saad"]

[tool.poetry.dependencies]
python = "^3.9"
requests-oauthlib = "1.3.1"
fastapi = "0.82.0"
pymongo = "4.2.0"
cryptography = "3.4.5"
uvicorn = { version = "0.18.3", extras = ["standard"] }


[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
toml = "0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
